# setup-environment-federicorichter

./: CMakeLists.txt  Doxyfile
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflow/: QAWorkflow.yml
include/: logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: dynamic.h
lib/libdyn/src/: dynamic.c
lib/libsta/: CMakeLists.txt
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
